# subconscious

./: .gitignore  CLAUDE.md  README.md  package.json  publish_package.sh
.claude/commands/: add-example.md
.github/workflows/: generate-manifest.yml  publish.yml
Documents/: quickstart.md  quickstart_cn.md
agents/: README.md  registry.json
cli/: README.md  package.json
create-subconscious-app/: .gitignore  README.md  package.json
examples/: manifest.json
examples/aider/: README.md  package.json  run.sh
examples/browser_automation/: .env.example  .gitignore  README.md  browser.py  main.py  pyproject.toml  tools.py
examples/city_of_boston_getting_started/: .env.example  .gitignore  Boston Subconscious Quickstart.ipynb  README.md  Subconscious Quickstart.ipynb  pyproject.toml
examples/claude_code/: README.md  package.json  run.sh
examples/cli_agent/: .env.example  README.md  package.json
examples/cli_agent/src/: index.tsx
examples/cli_agent/src/agent/: loop.ts
examples/cli_agent/src/commands/: chat.tsx  index.ts
examples/cli_agent/src/components/: Banner.tsx  Chat.tsx
examples/cli_agent/src/lib/: config.ts
examples/cli_agent/src/mcp/: client.ts
examples/cli_agent/src/slashCommands/: help.ts  types.ts
examples/cli_agent/src/tools/: filesystem.ts
examples/codex/: .env.example  .gitignore  README.md  config.toml  package.json  run.sh
examples/composio_fast_api/: .env.example  README.md  agent.py  composio_adapter.py  main.py  pyproject.toml
examples/convex_app/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json
examples/convex_app/convex/: chat.ts  http.ts  messages.ts  schema.ts  todos.ts  tools.ts
examples/convex_app/src/: App.tsx  index.css  main.tsx
examples/convex_app/src/components/: Chat.tsx  TodoList.tsx
examples/e2b_cli/: .env.example  .gitignore  README.md  clv_analysis.json  demo_data.csv  monthly_report.md  package.json  tsconfig.json
examples/e2b_cli/scripts/: postbuild.js
examples/e2b_cli/src/: config.ts  index.ts
examples/e2b_cli/src/agent/: executor.ts  loop.ts  prompt.ts  tools.ts
examples/e2b_cli/src/cli/: onboarding.ts  run.ts
examples/e2b_cli/src/e2b/: sandbox.ts
examples/e2b_cli/src/lib/: client.ts
examples/e2b_cli/src/session/: manager.ts
examples/e2b_cli/src/tools/: e2bServer.ts  tunnel.ts
examples/e2b_cli/src/types/: agent.ts
examples/e2b_cli/src/utils/: retry.ts  validation.ts
examples/e2b_subconscious_repo/: .env.example  .gitignore  README.md  package.json
examples/e2b_subconscious_repo/src/: config.ts
examples/e2b_subconscious_repo/src/agent/: evaluator.ts  executor.ts  planner.ts  termination.ts
examples/e2b_subconscious_repo/src/cli/: fileParser.ts  prompts.ts  run.ts
examples/e2b_subconscious_repo/src/e2b/: sandbox.ts
examples/e2b_subconscious_repo/src/tools/: e2bServer.ts  tunnel.ts
examples/e2b_subconscious_repo/src/types/: agent.ts
examples/e2b_subconscious_repo/src/utils/: logger.ts  outputManager.ts
examples/e2b_subconscious_repo/tests/: README.md  fibonacci.test.ts  sales_data.csv  statistical_analysis.test.ts
examples/getting_started_notebook/: README.md  Subconscious Quickstart.ipynb  getting_started.ipynb  pyproject.toml
examples/hack-cli-starter/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
examples/hack-cli-starter/src/: index.tsx  prompt.ts
examples/hack-cli-starter/src/agent/: loop.ts
examples/hack-cli-starter/src/commands/: _template.ts  config.ts  init.ts
examples/hack-cli-starter/src/lib/: client.ts  servers.ts
examples/hack-cli-starter/src/mcp/: client.ts
examples/hack-cli-starter/src/slashCommands/: _template.ts  clear.ts  exit.ts  index.ts  tools.ts
examples/hack-cli-starter/src/tools/: index.ts  weather.ts
examples/local_hosted_tools/: .env.example  README.md  agent.py  main.py  pyproject.toml  tools.py
examples/opencode/: README.md  package.json  run.sh
examples/search_agent/: .env.example  .gitignore  README.md  cli.py  requirements.txt
examples/search_agent/utils/: streaming.py
examples/search_agent_cli/: .env.example  README.md  __init__.py  cli.py  pyproject.toml  requirements.txt
examples/search_agent_cli/utils/: __init__.py  agent.py  client.py  errors.py  search.py  streaming.py  timeout.py
examples/structured_output_python/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
examples/structured_output_typescript/: .env.example  README.md  main.ts  package.json  tsconfig.json
examples/valtown_example_script/: .env.example  README.md  emailSummary.val.ts  package.json
examples/vercel-template/: .env.example  README.md  package-lock.json  package.json  vercel.json
examples/vercel-template/app/: globals.css  layout.tsx  page.tsx
examples/vercel-template/app/api/agent/: route.ts
examples/vercel-template/app/api/agent/stream/: route.ts
examples/vercel-template/app/api/tools/: route.ts
examples/vercel-template/app/api/tools/calculator/: route.ts
examples/vercel-template/app/api/tools/web-reader/: route.ts
examples/vercel-template/components/: AgentRunner.tsx  ReasoningDisplay.tsx  RunResult.tsx  StreamingText.tsx  ToolPanel.tsx
examples/vercel-template/lib/: stream-parser.ts  subconscious.ts  tool-registry.ts  tools.ts  types.ts
examples/vercel-template/scripts/: dev-tunnel.mjs
n8n-nodes-subconscious/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
n8n-nodes-subconscious/credentials/: SubconsciousApi.credentials.ts
n8n-nodes-subconscious/nodes/Subconscious/: GenericFunctions.ts  Subconscious.node.json  Subconscious.node.ts
n8n-nodes-subconscious/nodes/Subconscious/resources/run/: create.ts  index.ts
scripts/: generate-agents.js  generate-manifest.js
scripts/lib/: registry.js
