[project]
name = "composio-subconscious-agent"
version = "0.1.0"
description = "Connect 100+ Apps to your Agents with Subconscious + Composio as OAuth provider (client-side, no server)"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.40.0",
    # Pinned: the composio 1.0 prerelease line and the 0.x stable line have
    # incompatible APIs (connection + execution methods differ). Target stable.
    "composio==0.13.1",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.subconscious]
display_name = "Composio Agent (client-side)"
language = "python"
framework = "CLI"
tags = ["local"]
envVars = { SUBCONSCIOUS_API_KEY = { required = true }, COMPOSIO_API_KEY = { required = true, url = "https://dashboard.composio.dev" } }
setup = [
    "pip install .",
    "export SUBCONSCIOUS_API_KEY=your_key",
    "export COMPOSIO_API_KEY=your_composio_key",
    "python main.py connect github",
    "python main.py run 'Star the composiohq/composio repo'",
]
