[project]
name = "getting-started-notebook"
version = "0.1.0"
description = "Interactive Colab notebook to learn Subconscious from scratch — no experience required"
requires-python = ">=3.9"
dependencies = [
    "subconscious-sdk",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.subconscious]
display_name = "Getting Started Notebook"
setup = [
    "pip install .",
    "export SUBCONSCIOUS_API_KEY=your_key",
    "jupyter notebook getting_started.ipynb",
]
