[project]
name = "local-hosted-tools-starter"
version = "0.2.0"
description = "Image editing demo using a client-side ReAct loop against the Subconscious API — no server, no tunnel required."
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.40.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.subconscious]
display_name = "Local Image Editing Tools"
language = "python"
framework = "OpenAI SDK"
tags = ["image", "tools", "react-loop"]
envVars = { SUBCONSCIOUS_API_KEY = { required = true, url = "https://subconscious.dev/platform" } }
setup = [
    "pip install .",
    "export SUBCONSCIOUS_API_KEY=your_key",
    "python main.py",
]
