[project]
name = "search-agent-cli"
version = "0.1.0"
description = "CLI agent with web search capabilities powered by Subconscious"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "subconscious-sdk",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.subconscious]
display_name = "Search Agent CLI"
setup = [
    "pip install .",
    "export SUBCONSCIOUS_API_KEY=your_key",
    "python cli.py",
]
