[project]
name = "Structured Output (Python)"
version = "0.1.0"
description = "Get type-safe structured responses from Subconscious agents using Pydantic models"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "subconscious-sdk",
]

# Setup instructions for create-subconscious-app
setup = [
    "pip install -r requirements.txt",
    "export SUBCONSCIOUS_API_KEY=your_key",
    "python main.py"
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
